<li>Close progress dialogs instead of hiding them. Please see https://en.wikipedia.org/wiki/Shroedinger%27s_Cat.</li>
<li>Compute automatic digests in threads. Safely interrupt on process termination. Completed futures are occasionally removed.</li>
<li>Corrected importing of public keys. Cannot assume that key pairs exist.</li>
<li>Corrected removal of URLs having special characters.</li>
<li>Corrected setting of remote IP information. Please see Neighbors.</li>
<li>Corrected use of spoton::addFriendsKey().</li>
<li>Custom status messages. A maximum of 64 characters will be imposed.</li>
<li>Decreased message size of Rosetta output.</li>
<li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
<li>Derive subsequent file encryption key from initially-derived key via SHA-256 (Key_(i + 1) = SHA-256(Key_i)).</li>
<li>Digital signatures should vouch for private key information.</li>
<li>Display URL database connection information within the Search panel.</li>
<li>Do not delete URLs from shared.db unless they are properly loaded.<li>
<li>Do not initiate a rapid StarBeam if the specified participant is temporary.</li>
<li>Dual-purpose domain check boxes. Please see URLs.</li>
<li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
<li>Establish authentication and encryption keys via silent SMP. The authentication and encryption keys are derived from a Whirlpool digest of the secret.</li>
<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Many integer conversion corrections.</li>
<li>Modified QFileInfo::lastModified() usage. It's possible that a less-than-or-equal to comparison will leave containers in unpleasant states.</li>
<li>Notify the user of URL import statistics.</li>
<li>Populate URL polarizers before performing an import.</li>
<li>Prompt before accessing a remote URL.</li>